Adicionando formulário para preenchimento do item. Formulário conectado ao banco de dados.

--- a/Lets-Share/appsettings.json
+++ b/Lets-Share/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConexaoPadrao": "Server=localhost\\SQLEXPRESS;Database=LetsShare;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
