--- a/Lets-Share/appsettings.json
+++ b/Lets-Share/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConexaoPadrao": "Server=localhost\\SQLEXPRESS;Database=LetsShare;Trusted_Connection=True;"
+    "ConexaoPadrao": "Server=localhost;Database=LetsShare;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
